Adding hover image gallery

--- a/AllThatPicturesWeb/AllThatPicturesWeb.csproj
+++ b/AllThatPicturesWeb/AllThatPicturesWeb.csproj
@@ -71,8 +71,29 @@
     <Content Include="App\Home\Home.css" />
     <Content Include="App\Home\Home.html" />
     <Content Include="App\Home\Home.js" />
+    <Content Include="App\hoverbox.css" />
     <Content Include="Content\Office.css" />
     <Content Include="Images\Close.png" />
+    <Content Include="Images\photo01.jpg" />
+    <Content Include="Images\photo02.jpg" />
+    <Content Include="Images\photo03.jpg" />
+    <Content Include="Images\photo04.jpg" />
+    <Content Include="Images\photo05.jpg" />
+    <Content Include="Images\photo06.jpg" />
+    <Content Include="Images\photo07.jpg" />
+    <Content Include="Images\photo08.jpg" />
+    <Content Include="Images\photo09.jpg" />
+    <Content Include="Images\photo10.jpg" />
+    <Content Include="Images\photo11.jpg" />
+    <Content Include="Images\photo12.jpg" />
+    <Content Include="Images\photo13.jpg" />
+    <Content Include="Images\photo14.jpg" />
+    <Content Include="Images\photo15.jpg" />
+    <Content Include="Images\photo16.jpg" />
+    <Content Include="Images\photo17.jpg" />
+    <Content Include="Images\photo18.jpg" />
+    <Content Include="Images\photo19.jpg" />
+    <Content Include="Images\photo20.jpg" />
     <Content Include="packages.config" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
